--- a/css/ru-reto.css
+++ b/css/ru-reto.css
@@ -1,279 +1,40 @@
-.controller {
-  position: relative;
-  margin: 10px;
-}
-.controller button {
-  line-height: 30px;
-}
-.controller .num {
-  width: 30px;
-}
-
-#roulette {
-  top: 20px;
-  left: 100px;
-  position: relative;
-  animation-timing-function: cubic-bezier(0, 0.4, 0.4, 1.04);
-  animation-duration: 19s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: 1;
-  width: 266px;
-  height: 308px;
-  border-radius: 50%;
+.roulette-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
-  counter-reset: num;
+  width: 70vw; /* ビューポート全体の幅 */
+  height: 60px;
+  margin: 50px auto;
+  border: 2px solid #000;
+  position: relative;
+  background-color: #ffffff;
 }
 
-#roulette::after {
-  content: "";
-  display: block;
-  width: 80px;
-  height: 80px;
-  background-color: #fff;
-  border-radius: 50%;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  position: absolute;
+.roulette-track {
+  display: flex;
+  transition: transform 0.1s ease-out;
 }
 
-#roulette li {
-  top: 0;
-  right: 100;
-  left: 0;
-  margin: auto;
-  position: absolute;
-  display: block;
-  width: 100px;
-  height: 154px;
-  transform-origin: 100px 154px;
-}
-
-#roulette li::before {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 154px 50px;
-  z-index: 0;
-}
-
-#roulette li::after {
-  counter-increment: num;
-  content: counter(num);
-  z-index: 5;
-  position: absolute;
-  display: block;
-  width: 190px;
+.number {
+  font-size: 30px;
+  margin: 0 10px;
+  width: 50px;
   text-align: center;
-  line-height: 40px;
-  font-size: 20px;
-  color: #fff;
+}
+
+.highlight {
+  color: red;
+  font-weight: bold;
+  font-size: 40px; /* ハイライトされた数字のフォントサイズを大きくする */
+}
+
+.indicator {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 30px;
+  color: green;
   font-weight: bold;
 }
-
-#roulette li:nth-of-type(1) {
-  transform: rotate(36deg);  /* 必要に応じて角度を微調整 */
-}
-
-#roulette li:nth-of-type(1)::before {
-  border-color: #FFF100 transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(2) {
-  transform: rotate(72deg);
-}
-#roulette li:nth-of-type(2)::before {
-  border-color: #F39800 transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(3) {
-  transform: rotate(108deg);
-}
-#roulette li:nth-of-type(3)::before {
-  border-color: #EB6100 transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(4) {
-  transform: rotate(144deg);
-}
-#roulette li:nth-of-type(4)::before {
-  border-color: #E60012 transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(5) {
-  transform: rotate(180deg);
-}
-#roulette li:nth-of-type(5)::before {
-  border-color: #E4007F transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(6) {
-  transform: rotate(216deg);
-}
-#roulette li:nth-of-type(6)::before {
-  border-color: #601986 transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(7) {
-  transform: rotate(252deg);
-}
-#roulette li:nth-of-type(7)::before {
-  border-color: #0B318F transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(8) {
-  transform: rotate(288deg);
-}
-#roulette li:nth-of-type(8)::before {
-  border-color: #036EB8 transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(9) {
-  transform: rotate(324deg);
-}
-#roulette li:nth-of-type(9)::before {
-  border-color: #00913A transparent transparent transparent;
-}
-
-#roulette li:nth-of-type(10) {
-  transform: rotate(360deg);
-}
-#roulette li:nth-of-type(10)::before {
-  border-color: #8FC31F transparent transparent transparent;
-}
-
-@keyframes number-1 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3565deg);  /* 例えば、少し調整してみる */
-  }
-}
-
-
-@keyframes number-2 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3888deg);
-  }
-}
-
-@keyframes number-3 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3852deg);
-  }
-}
-
-@keyframes number-4 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3816deg);
-  }
-}
-
-@keyframes number-5 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3780deg);
-  }
-}
-
-@keyframes number-6 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3744deg);
-  }
-}
-
-@keyframes number-7 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3708deg);
-  }
-}
-
-@keyframes number-8 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3672deg);
-  }
-}
-
-@keyframes number-9 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3636deg);
-  }
-}
-
-@keyframes number-10 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(3600deg);
-  }
-}
-
-.number-1 {
-  animation-name: number-1;
-}
-
-.number-2 {
-  animation-name: number-2;
-}
-
-.number-3 {
-  animation-name: number-3;
-}
-
-.number-4 {
-  animation-name: number-4;
-}
-
-.number-5 {
-  animation-name: number-5;
-}
-
-.number-6 {
-  animation-name: number-6;
-}
-
-.number-7 {
-  animation-name: number-7;
-}
-
-.number-8 {
-  animation-name: number-8;
-}
-
-.number-9 {
-  animation-name: number-9;
-}
-
-.number-10 {
-  animation-name: number-10;
-}
-/* 他のクラスも同様に追加 */
